--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/icon" href="/favicon.ico" />
+
   <title>North Chat</title>
+  <meta name="description" content="Start chatting with your friends and family with fast and secure messaging." />
+  <link rel="icon" type="image/icon" href="/favicon.ico" />
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,500&display=swap" rel="stylesheet" />
 </head>
 
